Add google adsense script

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -64,6 +64,11 @@ const { title, url, description, ogType, ogImage } = Astro.props
 
     <LoadingIndicator color="#0d6eff" height="2.5px" />
     <ViewTransitions />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5253758564264517"
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <Header client:load />
