--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -54,6 +54,8 @@ const { title, url, description, ogType, ogImage } = Astro.props
     <meta property="og:description" content={description} />
     <meta name="”robots”" content="index, follow" />
 
+    <meta name="google-adsense-account" content="ca-pub-5253758564264517" />
+
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
